CERTMAN/sqcerman100/templates/Cert-manager/staging/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnd41-app-ingress
  namespace: qnd41-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx" 
   # cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-qnd41-issuer"
spec:
  tls:
  - hosts:
    - app.smartquail.io
    secretName: qnd41-do-dns
  ingressClassName: nginx
  rules:
   - host: app.smartquail.io
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qnd41-pro
                port:
                  number: 80
  defaultBackend:
    service:
      name: qnd41-pro
      port:
        number: 80
